feat: Switch to Evyde/tokenizers fork and clean binary files
- Replace github.com/daulet/tokenizers with github.com/Evyde/tokenizers v1.0.2
- Add go.mod replace directive to use the Windows-compatible fork
- Remove large binary files (MathReX, onnxruntime/*, libtokenizers/*)
- Keep repository clean - binaries will be downloaded/built during CI
- Update tokenizers library with Windows-compatible CGO flags
- Ensure GitHub Actions downloads dependencies dynamically

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -93,8 +93,8 @@ jobs:
 
           TOKENIZERS_REPO_DIR=../tokenizers_src_temp # Temporary directory for cloning
 
-          echo "Cloning daulet/tokenizers..."
-          git clone --depth 1 https://github.com/daulet/tokenizers.git $TOKENIZERS_REPO_DIR
+          echo "Cloning Evyde/tokenizers..."
+          git clone --depth 1 https://github.com/Evyde/tokenizers.git $TOKENIZERS_REPO_DIR
           cd $TOKENIZERS_REPO_DIR
 
           echo "Building libtokenizers with Cargo for target ${{ matrix.rust_target }}..."
