fix: Add C++ standard library linking for Windows tokenizers build
- Add -lstdc++ to CGO_LDFLAGS for Windows builds
- This fixes undefined C++ symbols (operator new/delete, std::ios_base::Init, etc.)
- Required because tokenizers library contains C++ code (esaxx.cpp)
- Windows builds now properly link against C++ standard library
- macOS builds already had -lstdc++ and work correctly

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -224,6 +224,9 @@ jobs:
 
           # Build with the new implementations
           echo "Building with CGO enabled and Windows-compatible tokenizers..."
+          # Add C++ standard library for Windows (required for tokenizers C++ code)
+          export CGO_LDFLAGS="$CGO_LDFLAGS -lstdc++"
+          echo "Final CGO_LDFLAGS: $CGO_LDFLAGS"
           go build -o bin/MathReX-windows-amd64.exe ./
 
           echo "✓ Windows build successful with fixed tokenizers and hotkey implementations"
