--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,7 +38,7 @@ jobs:
             goos: windows
             goarch: amd64
             asset_name_suffix: .exe
-            rust_target: x86_64-pc-windows-msvc
+            rust_target: x86_64-pc-windows-gnu
           # Windows ARM64 is more complex to set up for Rust cross-compilation, skipping for now.
           # - os: windows-latest
           #   goos: windows
@@ -99,11 +99,14 @@ jobs:
 
           echo "Building libtokenizers with Cargo for target ${{ matrix.rust_target }}..."
 
-          # For Windows, set specific environment for MSVC
+          # For Windows, set specific environment for GNU toolchain
           if [[ "${{ matrix.goos }}" == "windows" ]]; then
-            echo "Setting Windows-specific Rust build environment for MSVC..."
-            export RUSTFLAGS="-C target-feature=+crt-static"
-            # No need to set linker for MSVC - it uses the default Visual Studio tools
+            echo "Setting Windows-specific Rust build environment for GNU toolchain..."
+            # Use GNU toolchain to be compatible with Go's MinGW linker
+            export CC=x86_64-w64-mingw32-gcc
+            export CXX=x86_64-w64-mingw32-g++
+            export AR=x86_64-w64-mingw32-ar
+            export RUSTFLAGS="-C target-feature=+crt-static -C linker=x86_64-w64-mingw32-gcc"
           fi
 
           cargo build --release --target ${{ matrix.rust_target }}
@@ -223,7 +226,7 @@ jobs:
           mkdir -p bin
 
           # Build with the new implementations
-          echo "Building with CGO enabled and Windows-compatible tokenizers (MSVC)..."
+          echo "Building with CGO enabled and Windows-compatible tokenizers (GNU)..."
           # For Windows, we need to statically link C++ standard library to avoid libstdc++-6.dll dependency
           echo "Using CGO_LDFLAGS: $CGO_LDFLAGS"
 
