fix: Install MinGW for Windows GNU target compilation
- Add MinGW installation step for Windows builds using chocolatey
- This provides the required x86_64-w64-mingw32-gcc, x86_64-w64-mingw32-g++, and x86_64-w64-mingw32-ar tools
- Needed for building tokenizers library with GNU toolchain on Windows
- Should resolve the 'Failed to find tool' errors for Windows GNU target

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -70,6 +70,19 @@ jobs:
           toolchain: stable
           targets: ${{ matrix.rust_target }} # Ensure the target for cross-compilation is installed
 
+      - name: Install MinGW for Windows GNU target
+        if: matrix.goos == 'windows'
+        shell: bash
+        run: |
+          echo "Installing MinGW-w64 for Windows GNU target..."
+          # Use chocolatey to install mingw
+          choco install mingw -y
+          # Add MinGW to PATH
+          echo "C:/tools/mingw64/bin" >> $GITHUB_PATH
+          # Verify installation
+          echo "Checking MinGW installation..."
+          ls -la "C:/tools/mingw64/bin/" || echo "MinGW directory not found"
+
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
