--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -224,25 +224,13 @@ jobs:
           # Create output directory
           mkdir -p bin
 
-          # Set up MSVC environment using vcvars64.bat
-          echo "Setting up MSVC environment for CGO..."
+          # Since we have MSVC-compiled tokenizers, we need to use a compatible linker
+          # Let's try using the default Windows toolchain which should work with MSVC libraries
+          echo "Building with default Windows toolchain..."
+          echo "Using CGO_LDFLAGS: $CGO_LDFLAGS"
 
-          # Find and source MSVC environment
-          VCVARS_PATH="C:/Program Files/Microsoft Visual Studio/2022/Enterprise/VC/Auxiliary/Build/vcvars64.bat"
-          if [ ! -f "$VCVARS_PATH" ]; then
-            echo "Trying alternative MSVC paths..."
-            VCVARS_PATH="C:/Program Files (x86)/Microsoft Visual Studio/2019/Enterprise/VC/Auxiliary/Build/vcvars64.bat"
-          fi
-
-          if [ -f "$VCVARS_PATH" ]; then
-            echo "Found MSVC at: $VCVARS_PATH"
-            # Use cmd to run vcvars and then go build
-            cmd.exe //c "\"$VCVARS_PATH\" && go build -o bin/MathReX-windows-amd64.exe ./"
-          else
-            echo "MSVC not found, trying with default MinGW..."
-            # Fallback to MinGW if MSVC not available
-            go build -o bin/MathReX-windows-amd64.exe ./
-          fi
+          # Build the application
+          go build -o bin/MathReX-windows-amd64.exe ./
 
           echo "✓ Windows build completed"
         env:
