--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -290,7 +290,7 @@ jobs:
 
           # Add static linking flags for C++ standard library to avoid runtime dependencies
           echo "Using CGO_LDFLAGS: $CGO_LDFLAGS"
-          STATIC_LDFLAGS="$CGO_LDFLAGS -static-libgcc -static-libstdc++"
+          STATIC_LDFLAGS="$CGO_LDFLAGS -static-libgcc -static-libstdc++ -lstdc++"
           echo "Enhanced CGO_LDFLAGS with static linking: $STATIC_LDFLAGS"
 
           # Build the application with GNU toolchain
