fix: Restore ONNX runtime integration and remove gohook dependency
- Remove problematic github.com/robotn/gohook dependency that causes Windows compilation issues
- Implement simplified hotkey manager for Unix/macOS systems without global hotkey support
- Restore ONNX runtime library path detection for runtime-downloaded libraries
- Enhance Windows build with comprehensive static linking flags
- Fix macOS build issues by restoring proper library handling
- Update hotkey system to use new platform-agnostic interface

This addresses:
1. Windows compilation failures due to gohook dependency
2. macOS binary size reduction and corruption issues
3. Windows runtime dependency on libstdc++-6.dll
4. Cross-platform hotkey management

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -288,13 +288,13 @@ jobs:
           export CC=x86_64-w64-mingw32-gcc
           export CXX=x86_64-w64-mingw32-g++
 
-          # Add static linking flags for C++ standard library to avoid runtime dependencies
+          # Add comprehensive static linking flags to avoid runtime dependencies
           echo "Using CGO_LDFLAGS: $CGO_LDFLAGS"
-          STATIC_LDFLAGS="$CGO_LDFLAGS -static-libgcc -static-libstdc++ -lstdc++"
+          STATIC_LDFLAGS="$CGO_LDFLAGS -static-libgcc -static-libstdc++ -static -lstdc++ -lwinpthread"
           echo "Enhanced CGO_LDFLAGS with static linking: $STATIC_LDFLAGS"
 
-          # Build the application with GNU toolchain
-          CGO_LDFLAGS="$STATIC_LDFLAGS" go build -o bin/MathReX-windows-amd64.exe ./
+          # Build the application with GNU toolchain and static linking
+          CGO_LDFLAGS="$STATIC_LDFLAGS" go build -ldflags "-linkmode external -extldflags '-static'" -o bin/MathReX-windows-amd64.exe ./
 
           echo "✓ Windows build completed with GNU toolchain"
         env:
